--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ bSubstepping=False
 bSubsteppingAsync=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleTemplate/Maps/LVL_Vehicle.LVL_Vehicle
+EditorStartupMap=/Game/Lvl_RaceRoad.Lvl_RaceRoad
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
