--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,6 +45,7 @@ r.DefaultFeature.LightUnits=2
 r.VirtualTextures=True
 
 r.RayTracing.RayTracingProxies.ProjectEnabled=True
+r.AntiAliasingMethod=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
