--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,7 +45,8 @@ r.DefaultFeature.LightUnits=2
 r.VirtualTextures=True
 
 r.RayTracing.RayTracingProxies.ProjectEnabled=True
-r.AntiAliasingMethod=0
+r.AntiAliasingMethod=4
+r.Mobile.AntiAliasing=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
